# Career_centre_work

./: manage.py  pyproject.toml
companies/: admin.py  models.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_product.py
trade_net/: asgi.py  settings.py  urls.py  wsgi.py
